update save method